--- a/public/callP.html
+++ b/public/callP.html
@@ -33,7 +33,15 @@ var _hmt = _hmt || [];
             <li><a href="" style="margin-right:0">联系我们
                 <div class="sanjiao" style="opacity: 1"></div>
                 <div class="underline" style="opacity: 1"></div></a></li>
-            <li><a href="http://deeporiginalx.com/index.html#slide1">应用案例
+            <li><a href="joinP.html">加入我们
+                <div class="sanjiao" ></div>
+                <div class="underline" ></div>
+            </a></li>
+            <li><a href="bokeP.html">团队博客
+                <div class="sanjiao" ></div>
+                <div class="underline"></div>
+            </a></li>
+            <li><a href="Web2/index.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
@@ -78,11 +86,23 @@ var _hmt = _hmt || [];
         </div>
         <div class="navWord">我们的服务</div>
     </a></li>
-    <li><a href="project.html">
+    <li><a href="Web2/index.html">
         <div class="iconP">
             <img src="imgPhone/icon3.png">
         </div>
         <div class="navWord">应用案例</div>
+    </a></li>
+    <li><a href="bokeP.html">
+        <div class="iconP">
+            <img src="imgPhone/icon5.png">
+        </div>
+        <div class="navWord">团队博客</div>
+    </a></li>
+    <li><a href="joinP.html">
+        <div class="iconP">
+            <img src="imgPhone/icon6.png">
+        </div>
+        <div class="navWord">加入我们</div>
     </a></li>
     <li><a href="">
         <div class="iconP">
