--- a/public/mainP.html
+++ b/public/mainP.html
@@ -35,11 +35,23 @@ var _hmt = _hmt || [];
         </div>
         <div class="navWord">我们的服务</div>
     </a></li>
-    <li><a href="project.html">
+    <li><a href="Web2/index.html">
         <div class="iconP">
             <img src="imgPhone/icon3.png">
         </div>
         <div class="navWord">应用案例</div>
+    </a></li>
+    <li><a href="bokeP.html">
+        <div class="iconP">
+            <img src="imgPhone/icon5.png">
+        </div>
+        <div class="navWord">团队博客</div>
+    </a></li>
+    <li><a href="joinP.html">
+        <div class="iconP">
+            <img src="imgPhone/icon6.png">
+        </div>
+        <div class="navWord">加入我们</div>
     </a></li>
     <li><a href="callP.html">
         <div class="iconP">
