--- a/public/serveP.html
+++ b/public/serveP.html
@@ -3,19 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name ="viewport" content ="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-    <title>我们的服务</title>
+    <title>Document</title>
     <link rel="stylesheet" href="css/indexP.css"/>
+    <link rel="stylesheet" href="css/swiper.min.css"/>
     <script src="js/jquery.min.js"></script>
-    <script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "//hm.baidu.com/hm.js?29a000b556634acb4e03f00a9ca7cd24";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
-</script>
-
+    <script src="js/swiper.min.js"></script>
 </head>
 <body>
 <div class="topBox">
@@ -33,7 +25,15 @@ var _hmt = _hmt || [];
             <li><a href="callP.html" style="margin-right:0">联系我们
                 <div class="sanjiao" ></div>
                 <div class="underline" ></div></a></li>
-            <li><a href="http://deeporiginalx.com/index.html#slide1">应用案例
+            <li><a href="joinP.html">加入我们
+                <div class="sanjiao" ></div>
+                <div class="underline" ></div>
+            </a></li>
+            <li><a href="bokeP.html">团队博客
+                <div class="sanjiao" ></div>
+                <div class="underline"></div>
+            </a></li>
+            <li><a href="Web2/index.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
@@ -41,7 +41,7 @@ var _hmt = _hmt || [];
                 <div class="sanjiao" style="opacity: 1"></div>
                 <div class="underline" style="opacity: 1"></div>
             </a></li>
-            <li><a href="indexP.html">深源首页
+            <li><a href="">深源首页
                 <div class="sanjiao" ></div>
                 <div class="underline" ></div>
             </a></li>
@@ -57,78 +57,77 @@ var _hmt = _hmt || [];
             <div class="circle1">青岛输油<br>管道爆炸
             </div>
 
-        <div class="lineBox">
-            <div class="lineWbox">
-                <div class="lineTitle">青岛输油管道爆炸致6人遇难</div>
-                <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
-                <div class="lineDate">2013.11.22</div>
-            </div>
-            <div class="lineWbox">
-                <div class="lineTitle">9名责任人被警方控制</div>
-                <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
-                <div class="lineDate">2013.11.22</div>
-            </div>
-            <div class="lineWbox">
-                <div class="lineTitle">最终确认62人遇难</div>
-                <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
-                <div class="lineDate">2013.11.22</div>
-            </div>
-            <div class="lineWbox">
-                <div class="lineTitle">......</div>
-                <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
-                <div class="lineDate">......</div>
-            </div>
-            <div class="lineWbox">
-                <div class="lineTitle">中石化董事长及青岛市长被处分</div>
-                <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
-                <div class="lineDate">2013.11.22</div>
-            </div>
-        </div>
-        <div class="circle2">
-            <div class="more1"></div>
-            <div class="circle2_1">
-                <div class="circle2_2">
-                    <div class="circle2_3"></div>
+            <div class="lineBox">
+                <div class="lineWbox">
+                    <div class="lineTitle">青岛输油管道爆炸致6人遇难</div>
+                    <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
+                    <div class="lineDate">2013.11.22</div>
+                </div>
+                <div class="lineWbox">
+                    <div class="lineTitle">9名责任人被警方控制</div>
+                    <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
+                    <div class="lineDate">2013.11.22</div>
+                </div>
+                <div class="lineWbox">
+                    <div class="lineTitle">最终确认62人遇难</div>
+                    <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
+                    <div class="lineDate">2013.11.22</div>
+                </div>
+                <div class="lineWbox">
+                    <div class="lineTitle">......</div>
+                    <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
+                    <div class="lineDate">......</div>
+                </div>
+                <div class="lineWbox">
+                    <div class="lineTitle">中石化董事长及青岛市长被处分</div>
+                    <div style="width:100%;height:33.333%;position: relative"><div class="lineCircle"></div></div>
+                    <div class="lineDate">2013.11.22</div>
                 </div>
             </div>
-        </div>
-        <div style="clear: both"></div></div>
+            <div class="circle2">
+                <div class="more1"></div>
+                <div class="circle2_1">
+                    <div class="circle2_2">
+                        <div class="circle2_3"></div>
+                    </div>
+                </div>
+            </div>
+            <div style="clear: both"></div></div>
         <div class="cInnerp">
             <div class="circle1p">青岛输油<br>管道爆炸</div>
             <div class="lineBoxp">
                 <div class="lineWboxp">
-                    <div class="lineTitlep">青岛输油管道爆炸致6人遇难</div>
+                    <div class="lineTitlep">最终确认62人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
                     <div class="lineDatep">2013.11.22</div>
                 </div>
                 <div class="lineWboxp">
-                    <div class="lineTitlep">9名责任人被警方控制
-                    </div>
+                    <div class="lineTitlep">最终确认62人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">11.28</div>
+                    <div class="lineDatep">2013.11.22</div>
                 </div>
                 <div class="lineWboxp">
                     <div class="lineTitlep">最终确认62人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">12.03</div>
+                    <div class="lineDatep">2013.11.22</div>
                 </div>
                 <div class="lineWboxp">
-                    <div class="lineTitlep">......</div>
+                    <div class="lineTitlep">最终确认62人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">......</div>
+                    <div class="lineDatep">2013.11.22</div>
                 </div>
                 <div class="lineWboxp">
-                    <div class="lineTitlep">中石化董事长及青岛市长被处分</div>
+                    <div class="lineTitlep">最终确认62人遇难</div>
                     <div style="width:33.333%;height:100%;position: relative;float:right"><div class="lineCirclep"></div></div>
-                    <div class="lineDatep">2014.1.10</div>
+                    <div class="lineDatep">2013.11.22</div>
                 </div>
             </div>
             <!--<div class="circle2">-->
-                <div class="circle2_1p">
-                    <div class="circle2_2p">
-                        <div class="circle2_3p"></div>
-                    </div>
+            <div class="circle2_1p">
+                <div class="circle2_2p">
+                    <div class="circle2_3p"></div>
                 </div>
+            </div>
             <!--</div>-->
         </div>
         <div class="num1" id="1"></div>
@@ -200,7 +199,7 @@ var _hmt = _hmt || [];
                 <li>以色列国防部代表称，以色列警方开枪是回应性措施。</li>
             </ul>
             <div class="card3Jian"></div>
-            <div class="card3Word2">核心观点：以方称开枪是回应性措施</div>
+            <div class="card3Word2">核心观点：三名巴勒斯坦人攻击以色列人被以警方击毙</div>
         </div>
         <div style="clear: both"></div>
     </div>
@@ -223,24 +222,150 @@ var _hmt = _hmt || [];
         </div>
         <div style="clear: both"></div>
         <div class="num4" id="4"></div>
+        <div class="num5" id="5"></div>
     </div>
 </div>
-<div class="card1" style="margin-top:0;padding-bottom: 0">
-    <div class="card1Box pad" >
-        <div class="num5" id="5"></div>
-        <div class="icon3Box">
-            <div id="icon5"></div>
-            <span class="cWord1">定制信息关联挖掘</span>
-            <span class="cWord2">用数据为专业领域提供趋势分析</span>
+<div class="swiper-container ">
+    <div class="card1 swiper-wrapper" style="margin-top:0;padding-bottom: 0;background: red">
+
+        <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
+            <div class="icon5Box">
+                <div id="icon5"></div>
+                <span class="cWord1">定制信息关联挖掘</span>
+                <!--<span class="cWord2">用数据为专业领域提供趋势分析</span>-->
+            </div>
+            <div class="card5_1">
+            <div class="imgA">
+                <img src="imgServe/card5/imgA.png">
+            </div>
+            <div class="imgA_1">
+                <img src="imgServe/card5/imgA_1.png">
+            </div>
+            <div class="imgA_jian"></div>
+            <div class="imgA_word">
+                <div class="imgA_word1" style="margin-left: 0">
+                    <img src="imgServe/card5/imgAword1.png">
+                </div>
+                <div class="imgA_word1" style="padding: 0">
+                    <img src="imgServe/card5/imgAword2.png">
+                </div>
+                <div class="imgA_word1">
+                    <img src="imgServe/card5/imgAword3.png">
+                </div>
+                <div style="clear: both"></div>
+            </div>
+            <div class="imgA_jian"></div>
+            <div class="imgA_2">
+                <img src="imgServe/card5/imgA_2.png">
+            </div>
+            <div class="imgB">
+                <img src="imgServe/card5/imgB.png">
+            </div>
+            <div style="clear: both"></div>
+            </div>
+            <div class="phoneCard5_1">
+            <div class="imgA">
+                <img src="imgServe/card5/imgA.png">
+            </div>
+            <div class="phoneImgA_1">
+                <img src="imgServe/card5/phoneImgA_1.png">
+            </div>
+            <div class="imgA_jian"></div>
+            <div class="phoneWbox">
+                <div class="phoneWord" style="margin-left: 0">行业类别</div>
+                <div class="phoneWord">产品类别</div>
+                <div class="phoneWord">招聘需求</div>
+            </div>
+            <div class="imgA_jian"></div>
+            <div class="phoneImgA_2">
+                <img src="imgServe/card5/phoneImgA_2.png">
+            </div></div>
+            <div></div>
         </div>
-        <div class="card5Wbox">
-            <div class="card51"></div>
-            <div class="card5Jian"></div>
-            <div class="card52">
-        <div class="card5W">1979-2015改革开放以来运动行业相关趋势分析</div></div></div>
-        <div style="clear: both"></div>
-    <div style="clear: both"></div>
-</div>
+
+        <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
+            <div class="card5_2">
+            <div class="imgB" style="margin-top:240px">
+                <img src="imgServe/card5/imgB.png">
+            </div>
+            <div class="imgB_1">
+                <img src="imgServe/card5/imgB_1.png">
+            </div>
+            <div class="imgA_jian"></div>
+            <div class="imgA_word">
+                <div class="imgB_word1" style="margin-left: 0">
+                    <img src="imgServe/card5/imgBword1.png">
+                </div>
+                <div class="imgB_word1">
+                    <img src="imgServe/card5/imgBword2.png">
+                </div>
+                <div class="imgB_word1">
+                    <img src="imgServe/card5/imgBword3.png">
+                </div>
+                <div class="imgB_word1">
+                    <img src="imgServe/card5/imgBword4.png">
+                </div>
+                <div style="clear: both"></div>
+            </div>
+            <div class="imgB">
+                <img src="imgServe/card5/imgB.png">
+            </div>
+            <div style="clear: both"></div>
+            </div>
+            <div class="phoneCard5_2">
+            <div class="imgB" style="margin-top:150px">
+                <img src="imgServe/card5/imgB.png">
+            </div>
+            <div class="phoneImgB_1">
+                <img src="imgServe/card5/phoneImgB_1.png">
+            </div>
+            <div class="phoneImgB_2">
+                <img src="imgServe/card5/phoneImgB_2.png">
+            </div>
+            <div class="imgA_jian"></div>
+            <div class="phoneBbox">
+                <div class="phoneBword" style="margin-left: 0">
+                    <img src="imgServe/card5/phoneImgB_3.png">
+                </div>
+                <div class="phoneBword">
+                    <img src="imgServe/card5/phoneImgB_4.png">
+                </div>
+
+            </div>
+            <div class="phoneBbox">
+                <div class="phoneBword" style="margin-left: 0">
+                    <img src="imgServe/card5/phoneImgB_5.png">
+                </div>
+                <div class="phoneBword">
+                    <img src="imgServe/card5/phoneImgB_6.png">
+                </div>
+            </div></div>
+        </div>
+
+        <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
+            <!--<div class="card5_3">-->
+            <div class="imgCbox">
+            <div class="imgB">
+                <img src="imgServe/card5/imgC.png">
+            </div>
+            <div class="imgC_1">
+                <div class="card51"></div>
+                <div class="card5Jian"></div>
+                <div class="card52">
+                    <div class="card5W">1979-2015改革开放以来运动行业相关趋势分析</div></div></div>
+            <div style="clear: both"></div>
+            <div style="clear: both"></div>
+            <!--</div></div>-->
+        </div>
+
+    </div>
+        </div>
+    <!-- 如果需要分页器 -->
+    <div class="swiper-pagination swiper-pagination-white"></div>
+
+    <!-- 如果需要导航按钮 -->
+    <!--<div class="swiper-button-prev swiper-button-white"></div>-->
+    <!--<div class="swiper-button-next swiper-button-white"></div>-->
 </div>
 <div class="card2" style="padding-bottom: 50px">
     <div class="card2Box" >
@@ -258,7 +383,7 @@ var _hmt = _hmt || [];
             <div class="card6tu"><img src="imgServe/card6.png"></div>
         </div>
         <div style="clear: both"></div>
-        <div class="num6" id="6"></div>
+        <div class="num6" id="6" style="z-index: 999"></div>
     </div>
 </div>
 <div class="card1" >
@@ -275,7 +400,7 @@ var _hmt = _hmt || [];
             <ul class="card72">
                 <li>
                     <div class="card7icon"><img src="imgServe/card7icon1.png"></div>
-                <div class="card7Word">这些人来支招挣钱，抬高生育成本。究竟有多少人愿生二胎，生得起，养起也很困难啊。要交房贷、这样那样的贷款，心有余而力不足的怕是不在少数。</div>
+                    <div class="card7Word">这些人来支招挣钱，抬高生育成本。究竟有多少人愿生二胎，生得起，养起也很困难啊。要交房贷、这样那样的贷款，心有余而力不足的怕是不在少数。</div>
                 </li>
                 <li>
                     <div class="card7icon"><img src="imgServe/card7icon2.png"></div>
@@ -317,9 +442,9 @@ var _hmt = _hmt || [];
                     <img src="imgServe/card8.png">
                 </div>
                 <ul class="card82Word">
-                    <li>1、<span class="blue">希拉里</span>作为民主党参选代表许诺将兴建基础设施、创造更多就业机会作为竞选筹码...<span class="blue">得到</span>了纽约州相当多民众的<span class="blue">支持</span>等321万篇文章文章输出结果为可能当选</li>
-                    <li>2、2016年总统大选拉开帷幕，希拉里的竞争对手不仅得到幕后众多大资本家的支持更有相当可观的民意支持...<span class="blue">希拉里</span>作为女性候选人<span class="blue">势单力薄</span>等140万篇文章输出结果是可能落败</li>
-                    <li>3、历史上任何一次竞选都是大资本家和政治家么押注和玩弄手段的舞台剧...<span class="blue">普通民众</span>在台下只需要鼓掌呐喊和<span class="blue">及时退场</span>就可以了等93万篇文章输出结果为对希拉里竞选结果不关心</li>
+                    <li>1、<span class="blue">希拉里</span>作为民主党参选代表许诺将兴建基础设施、创造更多就业机会作为竞选筹码...<span class="blue">得到</span>>了纽约州相当多民众的<span class="blue">支持</span>>等321万篇文章文章输出结果为可能当选</li>
+                    <li>2、2016年总统大选拉开帷幕，希拉里的竞争对手不仅得到幕后众多大资本家的支持更有相当可观的民意支持...<span class="blue">希拉里</span>>作为女性候选人<span class="blue">势单力薄</span>等140万篇文章输出结果是可能落败</li>
+                    <li>3、历史上任何一次竞选都是大资本家和政治家么押注和玩弄手段的舞台剧...普通民众在台下只需要鼓掌呐喊和<span class="blue">及时退场</span>就可以了等93万篇文章输出结果为对希拉里竞选结果不关心</li>
                 </ul>
             </div>
             <div class="card6Jian" style="margin-top:-10px"></div>
@@ -342,7 +467,48 @@ var _hmt = _hmt || [];
         <div class="num8" id="8"></div>
     </div>
 </div>
+<div class="card1" >
+    <div class="card1Box" >
+        <div class="num9" id="9"></div>
+        <div class="icon5Box">
+            <div id="icon9"></div>
+            <span class="cWord1">网页正文抽取</span>
+            <!--<span class="cWord2">挖掘并重新组织内容，赋予内容更高价值</span>-->
+        </div>
+        <div class="card9Box">
+            <div class="card91">
+                <img src="imgServe/img9.png">
+            </div>
+            <div class="card9Jian"></div>
+            <div class="card92">
+                <span class="card9Title">世界互联网大会 习近平询问无人驾驶车何时商用</span>
+                <div class="card9Word">习近平16日在浙江省乌镇视察“互联网之光”博览会。习近平强调，互联网给人们的生产生活带来巨大变化，对很多领域的创新发展起到很强带动作用。我们要用好互联网带来的重大机遇，深入实施创新驱动发展战略。
+                    下午3时许，习近平抵达博览会展馆，在“互联网+”主题展区，视察国内外重点网信企业最新技术产品等成果，同企业家们亲切交流。
+                    阿里巴巴展台是习近平在展览会上考察的第一站。浙江是阿里巴巴的大本营，集团展台位于博览会入口处，十分醒目，展台的大屏上显示着“双11”购物狂欢节数据、农村淘宝实时数据等。
+                    习近平在阿里巴巴展台驻足约10分钟，集团董事局主席马云在这段时间里向习近平介绍了阿里巴巴电商业务的整体情况：平台上的850万活跃卖家已服务全球3.86亿消费者。在谈到今年“双11”全球狂欢节的有关情况时，马云说，中国需要“新实体经济”，互联网为中国经济形态插上了翅膀，“双11”当天创下912.17亿元交易新纪录充分展现了中国强大的内需。
+                </div>
+                </div></div>
+        <div style="clear: both"></div>
+    </div>
+</div>
 <footer style="margin-top:0">copyright© 2015-2016 G24lab.</footer>
+<script>
+    var mySwiper = new Swiper ('.swiper-container', {
+//        direction: 'vertical',
+        loop: true,
+        speed:300,
+        autoplay : 3000,
+        paginationClickable :true,
+        // 如果需要分页器
+        pagination: '.swiper-pagination',
+        paginationClickable :true,
+        // 如果需要前进后退按钮
+//        nextButton: '.swiper-button-next',
+//        prevButton: '.swiper-button-prev',
 
+        // 如果需要滚动条
+//        scrollbar: '.swiper-scrollbar',
+    })
+</script>
 </body>
 </html>
