--- a/public/indexP.html
+++ b/public/indexP.html
@@ -33,9 +33,17 @@
         </div>
         <ul class="navBox">
             <li><a href="callP.html" style="margin-right:0">联系我们
-            <div class="sanjiao" ></div>
-            <div class="underline" ></div></a></li>
-            <li><a href="http://deeporiginalx.com/index.html#slide1">应用案例
+                <div class="sanjiao" ></div>
+                <div class="underline" ></div></a></li>
+            <li><a href="joinP.html">加入我们
+                <div class="sanjiao" ></div>
+                <div class="underline" ></div>
+            </a></li>
+            <li><a href="bokeP.html">团队博客
+                <div class="sanjiao" ></div>
+                <div class="underline"></div>
+            </a></li>
+            <li><a href="Web2/index.html">应用案例
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
@@ -62,11 +70,11 @@
      <p class="mainWord">深源互动平台是基于分布式计算的数据获取和数据分析平台，结合独特的语义分析技术, 一站式满足用户词性分析，实体识别，句子压缩，文章摘要提取，文本分类，文本聚类，情感分析，关键词提取等自然语言处理功能API，同时提供全网数据抓取，可定制数据抓取服务。用户能够基于本平台提供的API实现搜索、推荐、舆情分析、定向挖掘等高级应用，也能够与我们合作定制具有产品特色的语义分析解决方案。</p>
     <div class="iconBox">
         <div class="iconInner">
-            <a href="serveP.html#1"><img src="img/icon1.png"></a>
+            <a href="servsTest.html#5" style="width:105px"><img src="img/icon1.png"></a>
             <div class="iconWord1">深度订阅</div>
             <div class="iconWord2">追踪热点事件</div>
             <div class="tiyanBox">
-                <a href="serveP.html#1">
+                <a href="">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
@@ -77,28 +85,87 @@
             <div class="iconWord1">句级别的内容聚类</div>
             <div class="iconWord2">精确到一句话的同类内容聚合</div>
             <div class="tiyanBox">
-                <a href="serveP.html#2">
+                <a href="">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
             </div>
         </div>
         <div class="iconInner">
-            <a href="serveP.html#3"><img src="img/icon3.png"></a>
+            <a href=""><img src="img/icon3.png"></a>
             <div class="iconWord1">核心观点抽取</div>
             <div class="iconWord2">抽取长篇大论的中心思想</div>
             <div class="tiyanBox">
-                <a href="serveP.html#3">
+                <a href="">
                     <span class="tiyan">立即体验</span>
                     <img src="img/jiantou.png">
                 </a>
             </div>
         </div>
+
+    </div>
+    <div class="iconBox">
         <div class="iconInner">
-            <a href="serveP.html#4"><img src="img/icon4.png"></a>
+            <a href=""><img src="img/icon4.png"></a>
             <div class="iconWord1">自动生成文章概要</div>
             <div class="iconWord2">让阅读更加简洁明了</div>
-            <div class="tiyanBox"><a href="serveP.html#4">
+            <div class="tiyanBox"><a href="">
+                <span class="tiyan">立即体验</span>
+                <img src="img/jiantou.png">
+            </a></div>
+        </div>
+        <div class="iconInner">
+            <a href=""><img src="img/icon5.png"></a>
+            <div class="iconWord1">大数据服务</div>
+            <div class="iconWord2">数据连接你与世界</div>
+            <div class="tiyanBox">
+                <a href="">
+                    <span class="tiyan">立即体验</span>
+                    <img src="img/jiantou.png">
+                </a>
+            </div>
+        </div>
+
+
+        <div class="iconInner">
+            <a href=""><img src="img/icon6.png"></a>
+            <div class="iconWord1">融合搜索服务</div>
+            <div class="iconWord2">全网中英文资讯搜索</div>
+            <div class="tiyanBox">
+                <a href="">
+                    <span class="tiyan">立即体验</span>
+                    <img src="img/jiantou.png">
+                </a>
+            </div>
+        </div>
+    </div>
+    <div class="iconBox">
+        <div class="iconInner">
+            <a href=""><img src="img/icon7.png"></a>
+            <div class="iconWord1">内容平台</div>
+            <div class="iconWord2">挖掘重组内容，赋予其更高价值</div>
+            <div class="tiyanBox">
+                <a href="">
+                    <span class="tiyan">立即体验</span>
+                    <img src="img/jiantou.png">
+                </a>
+            </div>
+        </div>
+
+        <div class="iconInner">
+            <a href=""><img src="img/icon8.png"></a>
+            <div class="iconWord1">情感分析</div>
+            <div class="iconWord2">NLP为你提供真实有效的参考意见</div>
+            <div class="tiyanBox"><a href="">
+                <span class="tiyan">立即体验</span>
+                <img src="img/jiantou.png">
+            </a></div>
+        </div>
+        <div class="iconInner">
+            <a href=""><img src="img/icon9.png"></a>
+            <div class="iconWord1">网页正文抽取</div>
+            <div class="iconWord2">自动获取网页正文</div>
+            <div class="tiyanBox"><a href="">
                 <span class="tiyan">立即体验</span>
                 <img src="img/jiantou.png">
             </a></div>
@@ -106,43 +173,10 @@
     </div>
     <div class="iconBox">
         <div class="iconInner">
-            <a href="serveP.html#5"><img src="img/icon5.png"></a>
-            <div class="iconWord1">定制信息关联挖掘</div>
-            <div class="iconWord2">用数据为专业领域提供趋势分析</div>
-            <div class="tiyanBox">
-                <a href="serveP.html#5">
-                    <span class="tiyan">立即体验</span>
-                    <img src="img/jiantou.png">
-                </a>
-            </div>
-        </div>
-        <div class="iconInner">
-            <a href="serveP.html#6"><img src="img/icon6.png"></a>
-            <div class="iconWord1">融合搜索服务</div>
-            <div class="iconWord2">全网中英文资讯搜索</div>
-            <div class="tiyanBox">
-                <a href="serveP.html#6">
-                    <span class="tiyan">立即体验</span>
-                    <img src="img/jiantou.png">
-                </a>
-            </div>
-        </div>
-        <div class="iconInner">
-            <a href="serveP.html#7"><img src="img/icon7.png"></a>
-            <div class="iconWord1">内容平台</div>
-            <div class="iconWord2">挖掘并重组内容，赋予内容更高价值</div>
-            <div class="tiyanBox">
-                <a href="serveP.html#7">
-                    <span class="tiyan">立即体验</span>
-                    <img src="img/jiantou.png">
-                </a>
-            </div>
-        </div>
-        <div class="iconInner">
-            <a href="serveP.html#8"><img src="img/icon8.png"></a>
-            <div class="iconWord1">情感分析</div>
-            <div class="iconWord2">NLP为你提供真实有效的参考意见</div>
-            <div class="tiyanBox"><a href="serveP.html#8">
+            <a href=""><img src="img/icon10.png"></a>
+            <div class="iconWord1">内容流推荐引擎</div>
+            <div class="iconWord2">打造个性化资讯阅读应用</div>
+            <div class="tiyanBox"><a href="">
                 <span class="tiyan">立即体验</span>
                 <img src="img/jiantou.png">
             </a></div>
@@ -169,11 +203,23 @@
             </div>
             <div class="navWord">我们的服务</div>
         </a></li>
-        <li><a href="project.html">
+        <li><a href="Web2/index.html">
             <div class="iconP">
                 <img src="imgPhone/icon3.png">
             </div>
             <div class="navWord">应用案例</div>
+        </a></li>
+        <li><a href="bokeP.html">
+            <div class="iconP">
+                <img src="imgPhone/icon5.png">
+            </div>
+            <div class="navWord">团队博客</div>
+        </a></li>
+        <li><a href="joinP.html">
+            <div class="iconP">
+                <img src="imgPhone/icon6.png">
+            </div>
+            <div class="navWord">加入我们</div>
         </a></li>
         <li><a href="callP.html">
             <div class="iconP">
