--- a/public/bokeP.html
+++ b/public/bokeP.html
@@ -21,14 +21,14 @@
 
         </div>
         <ul class="navBox">
-            <li><a href="" style="margin-right:0">联系我们
+            <li><a href="callP.html" style="margin-right:0">联系我们
                 <div class="sanjiao" style="opacity: 1"></div>
                 <div class="underline" style="opacity: 1"></div></a></li>
             <li><a href="joinP.html">加入我们
                 <div class="sanjiao" ></div>
                 <div class="underline" ></div>
             </a></li>
-            <li><a href="bokeP.html">团队博客
+            <li><a href="">团队博客
                 <div class="sanjiao" ></div>
                 <div class="underline"></div>
             </a></li>
@@ -36,7 +36,7 @@
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="indexP.html">我们的服务
+            <li><a href="serveP.html">我们的服务
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
