--- a/public/joinP.html
+++ b/public/joinP.html
@@ -40,12 +40,12 @@
 
         </div>
         <ul class="navBox">
-            <li><a href="" style="margin-right:0">联系我们
-                <div class="sanjiao" style="opacity: 1"></div>
-                <div class="underline" style="opacity: 1"></div></a></li>
-            <li><a href="joinP.html">加入我们
+            <li><a href="callP.html" style="margin-right:0">联系我们
                 <div class="sanjiao" ></div>
-                <div class="underline" ></div>
+                <div class="underline" ></div></a></li>
+            <li><a href="">加入我们
+                <div class="sanjiao" style="opacity: 1"></div>
+                <div class="underline" style="opacity: 1"></div>
             </a></li>
             <li><a href="bokeP.html">团队博客
                 <div class="sanjiao" ></div>
@@ -55,7 +55,7 @@
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
-            <li><a href="indexP.html">我们的服务
+            <li><a href="serveP.html">我们的服务
                 <div class="sanjiao"></div>
                 <div class="underline"></div>
             </a></li>
