--- a/public/Web2/index.html
+++ b/public/Web2/index.html
@@ -59,7 +59,9 @@
 	</div>
 
 		<div class="topP" style="position: relative;z-index: 999">
-			<div class="logoP"></div>
+			<div class="logoP">
+				<img src="../imgPhone/logoP.png">
+			</div>
 			<div class="btnP"></div>
 		</div>
 		<ul class="navP">
