--- a/public/Web2/index.html
+++ b/public/Web2/index.html
@@ -83,13 +83,13 @@
 				</div>
 				<div class="navWord">应用案例</div>
 			</a></li>
-			<li><a href="../project.html">
+			<li><a href="../bokeP.html">
 				<div class="iconP">
 					<img src="../imgPhone/icon5.png">
 				</div>
 				<div class="navWord">团队博客</div>
 			</a></li>
-			<li><a href="../project.html">
+			<li><a href="../joinP.html">
 				<div class="iconP">
 					<img src="../imgPhone/icon6.png">
 				</div>
