--- a/public/mainP.html
+++ b/public/mainP.html
@@ -159,5 +159,29 @@ var _hmt = _hmt || [];
         </div>
     </div>
 </div>
+<div class="iconBox" style="width:82%">
+    <div class="iconInner" style="width:50%">
+        <a href="serveP.html#9" style="width:130px"><img src="img/icon9.png"></a>
+        <div class="iconWord1" style="font-size: 28px">网页正文抽取</div>
+        <div class="iconWord2" style="font-size: 24px">自动获取网页正文</div>
+        <div class="tiyanBox">
+            <a href="serveP.html#9">
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
+                <img src="img/jiantouHover.png">
+            </a>
+        </div>
+    </div>
+    <div class="iconInner" style="width:50%">
+        <a href="serveP.html#10" style="width:130px"><img src="img/icon10.png"></a>
+        <div class="iconWord1" style="font-size:28px">内容流推荐引擎</div>
+        <div class="iconWord2" style="font-size: 24px">打造个性化资讯阅读应用</div>
+        <div class="tiyanBox">
+            <a href="serveP.html#10">
+                <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
+                <img src="img/jiantouHover.png">
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
