--- a/public/mainP.html
+++ b/public/mainP.html
@@ -114,8 +114,8 @@ var _hmt = _hmt || [];
 <div class="iconBox" style="width:82%">
     <div class="iconInner" style="width:50%">
         <a href="serveP.html#5" style="width:130px"><img src="img/icon5.png"></a>
-        <div class="iconWord1" style="font-size:28px">定制信息关联挖掘</div>
-        <div class="iconWord2" style="font-size:24px">用数据为专业领域提供趋势分析</div>
+        <div class="iconWord1" style="font-size:28px">大数据服务</div>
+        <div class="iconWord2" style="font-size:24px">数据连接你与世界</div>
         <div class="tiyanBox">
             <a href="serveP.html#5">
                 <span class="tiyan" style="color: #6cc1fb;font-size: 24px">立即体验</span>
