--- a/public/serveP.html
+++ b/public/serveP.html
@@ -199,7 +199,7 @@
                 <li>以色列国防部代表称，以色列警方开枪是回应性措施。</li>
             </ul>
             <div class="card3Jian"></div>
-            <div class="card3Word2">核心观点：三名巴勒斯坦人攻击以色列人被以警方击毙</div>
+            <div class="card3Word2">核心观点：以色列称开枪是回应性措施</div>
         </div>
         <div style="clear: both"></div>
     </div>
@@ -308,7 +308,7 @@
                 <div style="clear: both"></div>
             </div>
             <div class="imgB">
-                <img src="imgServe/card5/imgB.png">
+                <img src="imgServe/card5/imgC.png">
             </div>
             <div style="clear: both"></div>
             </div>
@@ -496,8 +496,8 @@
     var mySwiper = new Swiper ('.swiper-container', {
 //        direction: 'vertical',
         loop: true,
-        speed:300,
-        autoplay : 3000,
+        speed:1500,
+//        autoplay : 3000,
         paginationClickable :true,
         // 如果需要分页器
         pagination: '.swiper-pagination',
