--- a/public/serveP.html
+++ b/public/serveP.html
@@ -491,7 +491,7 @@
 //        direction: 'vertical',
         loop: true,
         speed:1500,
-//        autoplay : 3000,
+        autoplay : 3000,
         paginationClickable :true,
         // 如果需要分页器
         pagination: '.swiper-pagination',
