--- a/public/serveP.html
+++ b/public/serveP.html
@@ -41,7 +41,7 @@
                 <div class="sanjiao" style="opacity: 1"></div>
                 <div class="underline" style="opacity: 1"></div>
             </a></li>
-            <li><a href="">深源首页
+            <li><a href="indexP.html">深源首页
                 <div class="sanjiao" ></div>
                 <div class="underline" ></div>
             </a></li>
