--- a/public/bokexiangqing.html
+++ b/public/bokexiangqing.html
@@ -23,6 +23,7 @@
     <div class="xqdata">
         <div>2015年10月10日</div>
         <div>技术</div>
+        <div>作者：吕品</div>
     </div>
 <div style="clear: both"></div>
     <div class="xqnei">
