--- a/public/bokexiangqing2.html
+++ b/public/bokexiangqing2.html
@@ -24,6 +24,7 @@
 <div class="xqdata">
     <div>2015年10月10日</div>
     <div>技术</div>
+    <div>作者：吕品</div>
 </div>
     <div class="xqnei">
         <div class="xqword"> iOS7之前, 为了自定义控制器转场动画, 往往会通过自定义容器并实现分类方法transitionFromViewController:
