--- a/public/serveP.html
+++ b/public/serveP.html
@@ -231,135 +231,171 @@
         <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
             <div class="icon5Box">
                 <div id="icon5"></div>
-                <span class="cWord1">定制信息关联挖掘</span>
-                <!--<span class="cWord2">用数据为专业领域提供趋势分析</span>-->
+                <span class="cWord1">大数据服务</span>
+                <span class="cWord2">大数据为你筛选潜在客户</span>
             </div>
-            <div class="card5_1">
             <div class="imgA">
-                <img src="imgServe/card5/imgA.png">
-            </div>
-            <div class="imgA_1">
-                <img src="imgServe/card5/imgA_1.png">
-            </div>
-            <div class="imgA_jian"></div>
-            <div class="imgA_word">
-                <div class="imgA_word1" style="margin-left: 0">
-                    <img src="imgServe/card5/imgAword1.png">
+                <div class="imgA_L">
+                    <div class="imgA_L1">
+                        <img src="imgServe/card5s/imgA_L1.png">
+                    </div>
+                    <div class="imgA_L2">
+                        <img src="imgServe/card5s/imgA_L2.png">
+                    </div>
+                    <div class="imgA_L3box">
+                        <div class="imgA_L31">
+                            <img src="imgServe/card5s/imgA_L3.png">
+                        </div>
+                        <div class="imgA_L31">
+                            <img src="imgServe/card5s/imgA_L4.png">
+                        </div>
+                        <div class="imgA_L31">
+                            <img src="imgServe/card5s/imgA_L5.png">
+                        </div>
+                    </div>
                 </div>
-                <div class="imgA_word1" style="padding: 0">
-                    <img src="imgServe/card5/imgAword2.png">
+                <div class="imgA_C">
+                    <img src="imgServe/write.png">
                 </div>
-                <div class="imgA_word1">
-                    <img src="imgServe/card5/imgAword3.png">
+                <div class="imgA_R">
+                    <img src="imgServe/card5s/imgA_R.png">
                 </div>
                 <div style="clear: both"></div>
+
             </div>
-            <div class="imgA_jian"></div>
-            <div class="imgA_2">
-                <img src="imgServe/card5/imgA_2.png">
+            <div class="phoneImgA">
+                <div class="phoneImgA1">
+                    <img src="imgServe/card5s/imgA_L1.png">
+                </div>
+                <div class="phoneImgA2">
+                    <img src="imgServe/card5s/imgAdown.png">
+                </div>
+                <div  class="phoneImgA3">
+                    <div class="phoneImgA31">
+                        <img src="imgServe/card5s/imgA_L3.png">
+                    </div>
+                    <div class="phoneImgA31">
+                        <img src="imgServe/card5s/imgA_L4.png">
+                    </div>
+                    <div class="phoneImgA31">
+                        <img src="imgServe/card5s/imgA_L5.png">
+                    </div>
+                </div>
+                <div class="phoneImgA4">
+                    <img src="imgServe/write.png">
+                </div>
+                <div class="phoneImgA5">
+                    <img src="imgServe/card5s/imgA_R.png">
+                </div>
             </div>
-            <div style="clear: both"></div>
-            </div>
-            <div class="phoneCard5_1">
-            <div class="imgA">
-                <img src="imgServe/card5/imgA.png">
-            </div>
-            <div class="phoneImgA_1">
-                <img src="imgServe/card5/phoneImgA_1.png">
-            </div>
-            <div class="imgA_jian"></div>
-            <div class="phoneWbox">
-                <div class="phoneWord" style="margin-left: 0">行业类别</div>
-                <div class="phoneWord">产品类别</div>
-                <div class="phoneWord">招聘需求</div>
-            </div>
-            <div class="imgA_jian"></div>
-            <div class="phoneImgA_2">
-                <img src="imgServe/card5/phoneImgA_2.png">
-            </div></div>
-            <div></div>
         </div>
 
         <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
-            <div class="card5_2">
-            <div class="imgB" style="margin-top:240px">
-                <img src="imgServe/card5/imgB.png">
+            <div class="icon5Box">
+                <div id="icon51"></div>
+                <span class="cWord1">大数据服务</span>
+                <span class="cWord2">大数据为你推荐精选商品</span>
             </div>
-            <div class="imgB_1">
-                <img src="imgServe/card5/imgB_1.png">
-            </div>
-            <div class="imgA_jian"></div>
-            <div class="imgA_word">
-                <div class="imgB_word1" style="margin-left: 0">
-                    <img src="imgServe/card5/imgBword1.png">
+            <div class="imgA">
+                <div class="imgA_L" style="width: 50%">
+                    <div class="imgB_LT">
+                        <img src="imgServe/card5s/imgB_LT.png">
+                    </div>
+                    <div class="imgB_LB">
+                        <img src="imgServe/card5s/imgB_LB.png">
+                    </div>
                 </div>
-                <div class="imgB_word1">
-                    <img src="imgServe/card5/imgBword2.png">
+                <div class="imgA_C">
+                    <img src="imgServe/write.png">
                 </div>
-                <div class="imgB_word1">
-                    <img src="imgServe/card5/imgBword3.png">
-                </div>
-                <div class="imgB_word1">
-                    <img src="imgServe/card5/imgBword4.png">
+                <div class="imgB_R">
+                    <div class="imgB_R1" style="margin-top:0">
+                        <img src="imgServe/card5s/imgB_R1.png">
+                    </div>
+                    <div class="imgB_R1">
+                        <img src="imgServe/card5s/imgB_R2.png">
+                    </div>
+                    <div class="imgB_R1">
+                        <img src="imgServe/card5s/imgB_R3.png">
+                    </div>
+                    <div class="imgB_R1">
+                        <img src="imgServe/card5s/imgB_R4.png">
+                    </div>
                 </div>
                 <div style="clear: both"></div>
-            </div>
-            <div style="clear: both"></div>
-            </div>
-            <div class="phoneCard5_2">
-            <div class="imgB" style="margin-top:150px">
-                <img src="imgServe/card5/imgB.png">
-            </div>
-            <div class="phoneImgB_1">
-                <img src="imgServe/card5/phoneImgB_1.png">
-            </div>
-            <div class="phoneImgB_2">
-                <img src="imgServe/card5/phoneImgB_2.png">
-            </div>
-            <div class="imgA_jian"></div>
-            <div class="phoneBbox">
-                <div class="phoneBword" style="margin-left: 0">
-                    <img src="imgServe/card5/phoneImgB_3.png">
-                </div>
-                <div class="phoneBword">
-                    <img src="imgServe/card5/phoneImgB_4.png">
-                </div>
 
             </div>
-            <div class="phoneBbox">
-                <div class="phoneBword" style="margin-left: 0">
-                    <img src="imgServe/card5/phoneImgB_5.png">
+            <div class="phoneImgB">
+                <div class="phoneImgB1">
+                    <img src="imgServe/card5s/imgB_LT.png">
                 </div>
-                <div class="phoneBword">
-                    <img src="imgServe/card5/phoneImgB_6.png">
+                <div class="phoneImgB2">
+                    <img src="imgServe/card5s/imgB_LB.png">
                 </div>
-            </div></div>
+                <div class="phoneImgA4">
+                    <img src="imgServe/write.png">
+                </div>
+                <div class="phoneImgB3">
+                    <img src="imgServe/card5s/imgB_R1.png">
+                </div>
+                <div class="phoneImgB3">
+                    <img src="imgServe/card5s/imgB_R2.png">
+                </div>
+                <div class="phoneImgB3">
+                    <img src="imgServe/card5s/imgB_R3.png">
+                </div>
+                <div class="phoneImgB3">
+                    <img src="imgServe/card5s/imgB_R4.png">
+                </div>
+            </div>
         </div>
 
         <div class="card1Box pad swiper-slide" style="background:#6cc1fb;width:62.5%">
-            <!--<div class="card5_3">-->
-            <div class="imgCbox">
-            <div class="imgB">
-                <img src="imgServe/card5/imgC.png">
+            <div class="icon5Box">
+                <div id="icon52"></div>
+                <span class="cWord1">大数据服务</span>
+                <span class="cWord2">大数据为你提供决策服务</span>
             </div>
-            <div class="imgC_1">
-                <div class="card51"></div>
-                <div class="card5Jian"></div>
-                <div class="card52">
-                    <div class="card5W">1979-2015改革开放以来运动行业相关趋势分析</div></div></div>
+            <div class="imgA">
+                <div class="imgC_L">
+                    <img src="imgServe/card51.png">
+                </div>
+                <div class="imgA_C" style="margin:0 7%;padding: 20% 0">
+                    <img src="imgServe/write.png">
+                </div>
+                <div class="imgC_R">
+                    <div class="imgC_R1">
+                        <img src="imgServe/card52.png">
+                    </div>
+                    <div class="imgC_R2">1979-2015改革开放以来运动行业相关趋势分析</div>
+                </div>
+                <div style="clear: both"></div>
+            </div>
+            <div class="phoneImgC">
+                <div class="phoneImgC1">
+                    <img src="imgServe/card51.png">
+                </div>
+                <div class="phoneImgA4">
+                    <img src="imgServe/write.png">
+                </div>
+                <div class="phoneImgC2box">
+                    <div class="phoneImgC2">
+                        <img src="imgServe/card52.png">
+                    </div>
+                    <div class="phoneImgCword">1979-2015改革开放以来运动行业相关趋势分析</div>
+                </div>
+            </div>
             <div style="clear: both"></div>
             <div style="clear: both"></div>
             <!--</div></div>-->
         </div>
-
     </div>
-        </div>
     <!-- 如果需要分页器 -->
     <div class="swiper-pagination swiper-pagination-white"></div>
 
     <!-- 如果需要导航按钮 -->
-    <!--<div class="swiper-button-prev swiper-button-white"></div>-->
-    <!--<div class="swiper-button-next swiper-button-white"></div>-->
+    <div class="swiper-button-prev swiper-button-white"></div>
+    <div class="swiper-button-next swiper-button-white"></div>
 </div>
 <div class="card2" style="padding-bottom: 50px">
     <div class="card2Box" >
@@ -485,6 +521,28 @@
         <div style="clear: both"></div>
     </div>
 </div>
+<div class="card2" style="padding-bottom: 50px">
+    <div class="card2Box" >
+        <div class="icon5Box">
+            <div id="icon10"></div>
+            <span class="cWord1" style="color:#6cc1fb">内容流推荐引擎</span>
+            <!--<span class="cWord2">挖掘并重新组织内容，赋予内容更高价值</span>-->
+        </div>
+        <div class="card10_1">
+            <img src="imgServe/card5s/img10_1.png">
+        </div>
+        <div class="card10_2">26岁来自北京热爱电影、阅读、旅行可能即将步入婚姻的女性用户</div>
+        <div class="card10_3">
+            <img src="imgServe/blue.png">
+        </div>
+        <div class="card10_2" style="font-size: 30px;margin-top:0">推荐</div>
+        <div class="card10_1" style="margin-top: 0">
+            <img src="imgServe/card5s/img10_2.png">
+        </div>
+        <div style="clear: both"></div>
+        <div class="num10" id="10"></div>
+    </div>
+</div>
 <footer style="margin-top:0">copyright© 2015-2016 G24lab.</footer>
 <script>
     var mySwiper = new Swiper ('.swiper-container', {
@@ -493,12 +551,13 @@
         speed:1500,
         autoplay : 3000,
         paginationClickable :true,
+        autoplayDisableOnInteraction:false,
         // 如果需要分页器
         pagination: '.swiper-pagination',
         paginationClickable :true,
         // 如果需要前进后退按钮
-//        nextButton: '.swiper-button-next',
-//        prevButton: '.swiper-button-prev',
+        nextButton: '.swiper-button-next',
+        prevButton: '.swiper-button-prev',
 
         // 如果需要滚动条
 //        scrollbar: '.swiper-scrollbar',
