--- a/public/serveP.html
+++ b/public/serveP.html
@@ -536,7 +536,7 @@
             <img src="imgServe/blue.png">
         </div>
         <div class="card10_2" style="font-size: 30px;margin-top:0">推荐</div>
-        <div class="card10_1" style="margin-top: 0">
+        <div class="card10_1" style="margin-top: 0;width:70%">
             <img src="imgServe/card5s/img10_2.png">
         </div>
         <div style="clear: both"></div>
